# tt-logger

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-cd.yml
cmake/: CPM.cmake  tt-logger-config.cmake.in
include/tt-logger/: tt-logger-initializer.hpp  tt-logger.hpp
tests/: CMakeLists.txt  tt-logger-initializer-test.cpp  tt-logger-test.cpp
